2007-03-08  Brian Bidulock  <bidulock@openss7.org>

	* src/util/init/strss7.sh: ubuntu looks for lsb info in init scripts

2007-03-07  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/acb56/lis.conf: correct object names
	* src/modules/cd/lis.conf.in: correct object names
	* src/modules/dl/lis.conf.in: correct object names
	* src/modules/m2pa/lis.conf.in: correct object names
	* src/modules/mtp/lis.conf: correct object names
	* src/modules/mx/lis.conf: correct object names
	* src/modules/sdl/lis.conf: correct object names
	* src/modules/sl/lis.conf: correct object names
	* src/modules/ss7ip/lis.conf.in: correct object names
	* src/modules/ss7sctp/lis.conf.in: correct object names
	* src/modules/x400p-ss7/lis.conf: correct object names

	* Makefile.am (modutil_DATA): should not be distributed
	* tests/atlocal.in: tool substitutions changed

2007-03-07  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/tcap/lis.conf: tcap is a driver not a module
	* src/modules/inet/lis.conf.in: loadable takes object name not driver name
	* src/modules/inet/lis.conf.in: clone device by name instead of number
	* doc/man/man4/mtp_npi.4.man: fixed empty manual page sections
	* doc/man/man7/npi_sccp.7.man: fixed empty manual page sections

2007-03-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/Makefile.am: move conflicting manual pages
	* doc/manual/Makefile.am: attempt proper texinfo dependencies
	* doc/projects/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/cci/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/dlpi/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/mapi/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/npi/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/tci/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/tpi/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/tri/Makefile.am: attempt proper texinfo dependencies

2007-03-05  Brian Bidulock  <bidulock@openss7.org>
