@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo tw=100 nocin nosi
 @c =========================================================================
 @c
-@c @(#) $Id: bugs.texi,v 0.9.2.2 2007/03/06 21:26:12 brian Exp $
+@c @(#) $Id: bugs.texi,v 0.9.2.3 2007/03/09 04:09:29 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,15 +53,25 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2007/03/06 21:26:12 $ by $Author: brian $
+@c Last Modified $Date: 2007/03/09 04:09:29 $ by $Author: brian $
 @c
 @c =========================================================================
 
 @table @code
-@item 2007-03-05T15:58:14-0700
+@item 002.  2007-03-08T21:05:47-0700
+
+Timers were message up (using HZ instead of milliseconds) on the X400P driver.  This did not affect
+architectures with 1000 HZ or 1024 HZ tick clocks, but 100 HZ systems object.
+
+@emph{*fixed*} in @command{strss7-0.9a.6}
+
+@item 001. 2007-03-05T15:58:14-0700
+
 For some reason the package was always building and installing the @file{libxnet} texinfo document
 which was keeping the RPM from installing after the @file{strxnet} package.  This was fixed in
 @file{doc/manual/Makefile.am} with the addition of a @samp{WITH_XNET} conditional.
+
+@emph{*fixed*} in @command{strss7-0.9a.6}
 
 @end table
 
