@@ -1,3 +1,8 @@
+2007-03-09  Brian Bidulock  <bidulock@openss7.org>
+
+	* doc/manual/bugs.texi: documented timer bug
+	* src/modules/x400p-ss7/sl_x400p.c: fixed timer bug
+
 2007-03-08  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/util/init/strss7.sh: ubuntu looks for lsb info in init scripts
